# agent-mission-control

./: .gitignore  ARCHITECTURE.md  BACKEND_SETUP.md  CLAUDE.md  CLAUDE_3.0_VISION.md  README.md  SETUP_COMPLETE.md  requirements.txt
.claude/: boot_sequence.md  settings.local.json
atlas/: .super  README.md  dashboard.py  pyproject.toml  run_atlas.py
atlas/atlas/agents/: atlas.yaml
backend/: README.md  __init__.py  main.py
backend/api/: __init__.py  agents.py  memory.py  optimize.py  tests.py  vapi.py
backend/core/: __init__.py  config.py
backend/models/: __init__.py  requests.py  responses.py
config/: settings.yaml
docs/: SUPEROPTIX_RESEARCH.md  VAPI_INTEGRATION.md
frontend/: README.md  __init__.py  app.py
frontend/components/: __init__.py  api_client.py
frontend/pages/: 1_Dashboard.py  2_Agents.py  3_Optimization.py  4_VAPI.py  6_Memory.py
integrations/: superoptix_client.py  vapi_client.py
memory/: __init__.py  hybrid_connector.py  memory_sync.py  temporal_connector.py
playbooks/: integration_patterns.yaml
