[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas"
version = "0.1.0"
description = "An autonomous agent system powered by SuperOptiX"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    
]

[project.optional-dependencies]


[project.urls]
Homepage = "https://github.com/yourusername/atlas"
Repository = "https://github.com/yourusername/atlas.git"
"Bug Tracker" = "https://github.com/yourusername/atlas/issues"

[project.scripts]
atlas = "atlas.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.hatch.build.targets.wheel.sources]
"atlas" = "atlas"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py311"
